# TransformerFusion-Real-time-Multi-Model-Transformer-Inference-Optimizer

./: .gitignore  CMakeLists.txt  README.md  mps_verification.py  plot_benchmarks.py
include/: benchmark_suite.hpp  performance_monitor.hpp  transformer_fusion.hpp
src/: benchmark_suite.cu  demo.cpp  demo.cu  fusion_kernel.cpp  fusion_kernel.cu  fusion_kernel.mm  kv_cache_manager.cpp  kv_cache_manager.cu  performance_monitor.cu  speculative_decoder.cpp  speculative_decoder.cu  transformer.metal  transformer_fusion.cpp
